--- a/sdk/translation/ai-translation-document-rest/package.json
+++ b/sdk/translation/ai-translation-document-rest/package.json
@@ -46,7 +46,7 @@
     }
   },
   "dependencies": {
-    "@azure/core-rest-pipeline": "^1.8.0",
+    "@azure/core-rest-pipeline": "^^1.16.3",
     "@azure/logger": "^1.0.0",
     "@azure/core-paging": "^1.5.0",
     "@azure-rest/core-client": "^2.0.0",
