Fixing format issue

--- a/sdk/translation/ai-translation-document-rest/tsconfig.json
+++ b/sdk/translation/ai-translation-document-rest/tsconfig.json
@@ -7,11 +7,5 @@
       "@azure-rest/ai-translation-document": ["./src/index"]
     }
   },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.mts",
-    "./src/**/*.cts",
-    "test/**/*.ts",
-    "./test/**/*.ts"
-  ]
+  "include": ["./src/**/*.ts", "./src/**/*.mts", "./src/**/*.cts", "test/**/*.ts", "./test/**/*.ts"]
 }
