--- a/sdk/translation/ai-translation-document-rest/tsconfig.json
+++ b/sdk/translation/ai-translation-document-rest/tsconfig.json
@@ -7,5 +7,12 @@
       "@azure-rest/ai-translation-document": ["./src/index"]
     }
   },
-  "include": ["./src/**/*.ts", "./src/**/*.mts", "./src/**/*.cts", "test/**/*.ts", "./test/**/*.ts"]
+  "include": [
+    "./src/**/*.ts",
+    "./src/**/*.mts",
+    "./src/**/*.cts",
+    "test/**/*.ts",
+    "./test/**/*.ts",
+    "samples-dev/**/*.ts"
+  ]
 }
