--- a/sdk/translation/ai-translation-document-rest/package.json
+++ b/sdk/translation/ai-translation-document-rest/package.json
@@ -49,7 +49,7 @@
     "@azure-rest/core-client": "workspace:~",
     "@azure/abort-controller": "workspace:~",
     "@azure/core-auth": "workspace:~",
-    "@azure/core-lro": "3.0.0-beta.1",
+    "@azure/core-lro": "workspace:~",
     "@azure/core-paging": "workspace:~",
     "@azure/core-rest-pipeline": "workspace:~",
     "@azure/logger": "workspace:~",
@@ -61,7 +61,7 @@
     "@azure/dev-tool": "workspace:~",
     "@azure/eslint-plugin-azure-sdk": "workspace:~",
     "@azure/identity": "workspace:~",
-    "@azure/storage-blob": "^12.23.0",
+    "@azure/storage-blob": "workspace:~",
     "@microsoft/api-extractor": "catalog:",
     "@types/chai": "catalog:",
     "@types/mocha": "catalog:",
@@ -77,7 +77,6 @@
     "karma-env-preprocessor": "catalog:",
     "karma-firefox-launcher": "catalog:",
     "karma-junit-reporter": "catalog:",
-    "karma-mocha": "catalog:",
     "karma-mocha": "catalog:",
     "karma-mocha-reporter": "catalog:",
     "karma-source-map-support": "catalog:",
