--- a/sdk/translation/ai-translation-document-rest/package.json
+++ b/sdk/translation/ai-translation-document-rest/package.json
@@ -3,7 +3,7 @@
   "sdk-type": "client",
   "author": "Microsoft Corporation",
   "description": "A generated SDK for DocumentTranslationClient.",
-  "version": "2.0.0-beta.1",
+  "version": "1.0.0",
   "keywords": [
     "node",
     "azure",
